@@ -17,4 +17,4 @@ requires:
   DBI: 0
   Encode: 0
   Want: 0
-version: 1.45_01
+version: 1.45_02
