@@ -1,13 +1,14 @@
 # $Header: /home/jesse/DBIx-SearchBuilder/history/SearchBuilder/Handle/Oracle.pm,v 1.14 2002/01/28 06:11:37 jesse Exp $
 
-use strict;
 package DBIx::SearchBuilder::Handle::Oracle;
+
+use strict;
+use warnings;
+
 use base qw/DBIx::SearchBuilder::Handle/;
+
 use DBD::Oracle qw(:ora_types);
          
-use vars qw($VERSION $DBIHandle $DEBUG);
-
-
 =head1 NAME
 
   DBIx::SearchBuilder::Handle::Oracle - An oracle specific Handle object
@@ -42,14 +43,14 @@ sub Connect  {
 	       Host => undef,
 	       @_);
   
-    $self->SUPER::Connect(%args);
+    my $rv = $self->SUPER::Connect(%args);
     
     $self->dbh->{LongTruncOk}=1;
     $self->dbh->{LongReadLen}=8000;
     
     $self->SimpleQuery("ALTER SESSION set NLS_DATE_FORMAT = 'YYYY-MM-DD HH24:MI:SS'");
     
-    return ($DBIHandle); 
+    return ($rv); 
 }
 
 
@@ -248,21 +249,19 @@ sub DistinctQuery {
 
     # Wrapp select query in a subselect as Oracle doesn't allow
     # DISTINCT against CLOB/BLOB column types.
+    # Joop van de Wege: Thats correct but ORDER_BY column not in main doesn't need GROUP_BY
+    # so drop the group_by lines and add the order_by part but without the min()
     if ($sb->_OrderClause =~ /(?<!main)\./) {
-        # If we are ordering by something not in 'main', we need to GROUP
-        # BY and adjust the ORDER_BY accordingly
-        local $sb->{group_by} = [@{$sb->{group_by} || []}, {FIELD => 'id'}];
-        local $sb->{order_by} = [map {($_->{ALIAS} and $_->{ALIAS} ne "main") ? {%{$_}, FIELD => "min(".$_->{FIELD}.")"}: $_} @{$sb->{order_by}}];
-        my $group = $sb->_GroupClause;
         my $order = $sb->_OrderClause;
-        $$statementref = "SELECT main.* FROM ( SELECT main.id FROM $$statementref $group $order ) distinctquery, $table main WHERE (main.id = distinctquery.id)";
+        $$statementref = "SELECT main.* FROM ( SELECT main.id FROM $$statementref $order ) distinctquery,"
+            ." $table main WHERE (main.id = distinctquery.id)";
     } else {
-        $$statementref = "SELECT main.* FROM ( SELECT DISTINCT main.id FROM $$statementref ) distinctquery, $table main WHERE (main.id = distinctquery.id) ";
+        $$statementref = "SELECT main.* FROM ( SELECT DISTINCT main.id FROM $$statementref ) distinctquery,"
+            ." $table main WHERE (main.id = distinctquery.id) ";
         $$statementref .= $sb->_GroupClause;
         $$statementref .= $sb->_OrderClause;
     }
 }
-
 
 
 
